- basic templates and logic verification

--- a/client/index.ng.html
+++ b/client/index.ng.html
@@ -11,6 +11,9 @@
       <button class="button button-icon" ng-click="newTask()">
         <i class="icon ion-compose"></i>
       </button>
+      <button class="button button-icon" ng-repeat="order in Orders" ng-click="newTask()">
+        <i class="icon ion-compose"></i>
+      </button>
     </ion-header-bar>
     <ion-content has-header="true" scroll="true">
       <ion-list>
