--- a/client/main.html
+++ b/client/main.html
@@ -4,6 +4,6 @@
 </head>
 
 <body class="grade-a platform-browser platform-ios platform-ios7 platform-ios7_0 platform-ready">
-<ion-nav-view>
+<ion-nav-view animation="slide-left-right">
 </ion-nav-view>
 </body>
