--- a/client/confirm-order.ng.html
+++ b/client/confirm-order.ng.html
@@ -11,10 +11,7 @@
     </button>
   </ion-header-bar>
   <ion-content has-header="true" scroll="true">
-    <ion-list>
-      <ion-item ng-repeat="task in Tasks | filter:{project: activeProject()._id}">
-        {{task.title}}
-      </ion-item>
-    </ion-list>
+    <div>Conformation</div>
+    <div><a ui-sref="place-order"></a></div>
   </ion-content>
 </ion-view>
