--- a/client/place-order.ng.html
+++ b/client/place-order.ng.html
@@ -4,17 +4,14 @@
     <button class="button button-icon" ng-click="toggleProjects()">
       <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
     </button>
-    <h1 class="title"><a ng-click="goto1()" nav-transition="ios">{{activeProject().title}} 222</a></h1>
+    <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{activeProject().title}} 111</a></h1>
     <!-- New Task button-->
     <button class="button button-icon" ng-click="newTask()">
       <i class="icon ion-compose"></i>
     </button>
   </ion-header-bar>
   <ion-content has-header="true" scroll="true">
-    <ion-list>
-      <ion-item ng-repeat="task in Tasks | filter:{project: activeProject()._id}">
-        {{task.title}}
-      </ion-item>
-    </ion-list>
+    <div>Place ORder</div>
+    <div><a ui-sref="confirm-order">Confirm Order</a></div>
   </ion-content>
 </ion-view>
