- first working protoiype

--- a/client/place-order.ng.html
+++ b/client/place-order.ng.html
@@ -1,17 +1,21 @@
 <!-- Center content -->
 <ion-view>
-  <ion-header-bar class="bar bar-header bar-dark">
-    <button class="button button-icon" ng-click="toggleProjects()">
-      <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
-    </button>
-    <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{activeProject().title}} 111</a></h1>
-    <!-- New Task button-->
-    <button class="button button-icon" ng-click="newTask()">
-      <i class="icon ion-compose"></i>
-    </button>
-  </ion-header-bar>
-  <ion-content has-header="true" scroll="true">
-    <div>Place ORder</div>
-    <div><a ui-sref="confirm-order">Confirm Order</a></div>
-  </ion-content>
+  <div class="order-placement" style="background-image: url(/img/shops/{{ shop.cover }})">
+    <div class="order-placement-overlay">
+      <div class="waiting-text">
+        Please wait while we confirm your order at {{ shop.name }} .
+      </div>
+
+      <div id="floatingCirclesG">
+        <div class="f_circleG" id="frotateG_01"></div>
+        <div class="f_circleG" id="frotateG_02"></div>
+        <div class="f_circleG" id="frotateG_03"></div>
+        <div class="f_circleG" id="frotateG_04"></div>
+        <div class="f_circleG" id="frotateG_05"></div>
+        <div class="f_circleG" id="frotateG_06"></div>
+        <div class="f_circleG" id="frotateG_07"></div>
+        <div class="f_circleG" id="frotateG_08"></div>
+      </div>
+    </div>
+  </div>
 </ion-view>
