--- a/client/confirm-order.ng.html
+++ b/client/confirm-order.ng.html
@@ -1,17 +1,10 @@
 <!-- Center content -->
 <ion-view>
-  <ion-header-bar class="bar bar-header bar-dark">
-    <button class="button button-icon" ng-click="toggleProjects()">
-      <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
-    </button>
-    <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{activeProject().title}} 111</a></h1>
-    <!-- New Task button-->
-    <button class="button button-icon" ng-click="newTask()">
-      <i class="icon ion-compose"></i>
-    </button>
-  </ion-header-bar>
-  <ion-content has-header="true" scroll="true">
-    <div>Conformation</div>
-    <div><a ui-sref="place-order"></a></div>
-  </ion-content>
+  <div class="order-placement" style="background-image: url(/img/shops/{{ shop.cover }})">
+    <div class="order-placement-overlay">
+      <div class="waiting-text">
+        Pick up your order at {{ shop.name }}
+      </div>
+    </div>
+  </div>
 </ion-view>
