--- a/client/create-order.ng.html
+++ b/client/create-order.ng.html
@@ -1,17 +1,43 @@
 <!-- Center content -->
 <ion-view>
-  <ion-header-bar class="bar bar-header bar-dark">
-    <button class="button button-icon" ng-click="toggleProjects()">
-      <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
-    </button>
-    <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{activeProject().title}} 111</a></h1>
-    <!-- New Task button-->
-    <button class="button button-icon" ng-click="newTask()">
-      <i class="icon ion-compose"></i>
-    </button>
-  </ion-header-bar>
   <ion-content has-header="true" scroll="true">
-    <div>Utrecht</div>
-    <div><a ui-sref="place-order">Place Order</a></div>
+    <div class="title-image" style="background-image: url(/img/shops/{{ shop.cover }})">
+      <div class="title-image-overlay">
+        <div class="title">
+          {{ shop.name }}
+        </div>
+        <div class="subtitle">
+          at Utrecht, Centraal
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="eta">
+        <div class="label">
+          Your Total
+        </div>
+        <div class="time-select">
+          {{ totalPrice() | number:2 }} €
+          <div ng-click="placeOrder()">Order</div>
+        </div>
+      </div>
+      <div class="clear"></div>
+
+      <div class="product-index">
+        <div class="product-item" ng-repeat="product in shop.products" ng-click="addProduct(product)">
+          <div class="name">
+            {{ product.name }}
+
+            <div class="count">
+              {{ productCount(product) }}
+            </div>
+          </div>
+          <div class="price">
+            {{ product.price | number:2 }} €
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
