--- a/client/confirm-order.ng.html
+++ b/client/confirm-order.ng.html
@@ -3,9 +3,8 @@
   <div class="order-placement" style="background-image: url(/img/shops/{{ shop.cover }})">
     <div class="order-placement-overlay">
       <div class="pickup-text">
-        Code:<br />
-        <strong>{{ order.pickupCode }}</strong>
-        <br />
+        Code: <br />
+        <strong>{{ order.pickupCode }}</strong><br />
         Pick up your order at {{ shop.name }}
       </div>
       <img class="map" src="/img/map1.png" />
