--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,11 @@
 <head>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>ionic todo example</title>
+  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png"/>
+  <meta name="apple-mobile-web-app-title" content="habbs.co">
+  <meta name="mobile-web-app-title" content="habbs.co">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <title>habbs.co</title>
 </head>
 
 <body class="grade-a platform-browser platform-ios platform-ios7 platform-ios7_0 platform-ready">
