--- a/client/order-management.ng.html
+++ b/client/order-management.ng.html
@@ -4,7 +4,7 @@
     <button class="button button-icon" ng-click="toggleProjects()">
       <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
     </button>
-    <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{activeProject().title}} 111</a></h1>
+    <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{ currentShop.name }}</a></h1>
     <!-- New Task button-->
     <button class="button button-icon" ng-click="newTask()">
       <i class="icon ion-compose"></i>
