--- a/client/order-management.ng.html
+++ b/client/order-management.ng.html
@@ -5,13 +5,13 @@
       <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
     </button>
     <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{ currentShop.name }}</a></h1>
-    <!-- New Task button-->
-    <button class="button button-icon" ng-click="newTask()">
-      <i class="icon ion-compose"></i>
-    </button>
   </ion-header-bar>
   <ion-content has-header="true" scroll="true">
-    <div>Order Management</div>
-    <div><a ui-sref="confirm-order">Confirm Order</a></div>
+    <ion-list ng-if="currentShop">
+      <ion-item class="item-avatar-left" ng-repeat="order in filteredOrders()">
+        <img src="/img/avatars/avatar1.jpg">
+        {{ order }}
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
