--- a/client/create-order.ng.html
+++ b/client/create-order.ng.html
@@ -3,7 +3,7 @@
   <ion-content has-header="true" scroll="true">
     <div class="title-image" style="background-image: url(/img/shops/{{ shop.cover }})">
       <div class="title-image-overlay">
-        <div class="title">
+        <div class="title" ng-click="goBack">
           {{ shop.name }}
         </div>
         <div class="subtitle">
