--- a/client/order-management.ng.html
+++ b/client/order-management.ng.html
@@ -2,15 +2,25 @@
 <ion-view>
   <ion-header-bar class="bar bar-header bar-dark">
     <button class="button button-icon" ng-click="toggleProjects()">
-      <i class="icon ion-navicon"></i><i class="fa fa-area-chart"></i>
+      <i class="icon ion-navicon"></i>
     </button>
     <h1 class="title"><a ui-sref="order2" nav-transition="ios">{{ currentShop.name }}</a></h1>
   </ion-header-bar>
   <ion-content has-header="true" scroll="true">
     <ion-list ng-if="currentShop">
-      <ion-item class="item-avatar-left" ng-repeat="order in filteredOrders()">
-        <img src="/img/avatars/avatar1.jpg">
-        {{ order }}
+      <ion-item class="item-avatar-left" ng-class="{'picked-up': order.pickedUp}" ng-repeat="order in filteredOrders()" ng-click="setActiveOrder(order)">
+        <img ng-src="/img/avatars/{{ order.avatar }}">
+        <p>{{ order.pickupCode }}</p>
+        <p>{{ order.pickupTime }}</p>
+        <p>{{ order.username }}</p>
+        <ion-option-button class="button-positive" ng-click="pickedUp(order)">Picked Up</ion-option-button>
+
+
+        <div ng-if="activeOrder._id == order._id">
+          <div ng-repeat="product in order.products">
+            {{ product.name }}
+          </div>
+        </div>
       </ion-item>
     </ion-list>
   </ion-content>
